# tiedye

./: CLAUDE.md  Cargo.toml  README.md  clippy.toml  sheepit.toml
.github/workflows/: validate.yml
shaders/: tiedye.wgsl
src/: cli.rs  error.rs  info.rs  lib.rs  main.rs  renderer.rs
src/renderer/: output.rs  pipeline.rs  textures.rs
